--- a/ShopVerse.API/ShopVerse.API.csproj
+++ b/ShopVerse.API/ShopVerse.API.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
     <PackageReference Include="Scrutor" Version="4.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
@@ -15,6 +17,7 @@
     <ProjectReference Include="..\ShopVerse.Application\ShopVerse.Application.csproj" />
     <ProjectReference Include="..\ShopVerse.Infrastructure\ShopVerse.Infrastructure.csproj" />
     <ProjectReference Include="..\ShopVerse.Shared\ShopVerse.Shared.csproj" />
+    <ProjectReference Include="..\ShopVerse.EntityFrameworkCore\ShopVerse.EntityFrameworkCore.csproj" />
   </ItemGroup>
 
 </Project>
