adding entityframework core demo

--- a/ShopVerse.API/appsettings.json
+++ b/ShopVerse.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=your_server;Database=your_database;User Id=your_user;Password=your_password;"
+    "DefaultConnection": "Server=localhost;Database=ShopVerse;Integrated Security=true;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
