--- a/ShopVerse.API/Properties/launchSettings.json
+++ b/ShopVerse.API/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7049;http://localhost:5003",
+      "applicationUrl": "https://localhost:7049;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
